# FightingGameEngine

./: .gitignore  CMakeLists.txt  README.md
include/input/: CommandCompiler.h  CommandScanner.h  VirtualController.h
src/: main.cpp
src/domain_language/: Compiler.cpp
src/graphics/: Animation.cpp  GameTexture.cpp
src/input/: CommandCompiler.cpp
src/states/: FightState.cpp  FightStatusLinux.cpp
